--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script src="./JS/task1.js"></script>
     <script src="./JS/task2.js"></script>
     <script src="./JS/task3.js"></script>
+    <script src="./JS/task4.js"></script>
 </body>
 </html>
